--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local-mongoose": "^8.0.0",
+    "react": "^18.2.0",
     "session": "^0.1.0"
   },
   "name": "secrets---starting-code",
